--- a/fe_html_07-08/css/style.css
+++ b/fe_html_07-08/css/style.css
@@ -77,7 +77,7 @@
 /* Common Objects */
 
 body {
-  min-width: 320px;
+  min-width: 960px;
 }
 
 .clearfix:after {
